<resources>
    <string name="app_name" translatable="false">AddIt</string>
    <string name="action_settings">Settings</string>
    <string name="default_string">DEFAULT VALUE</string>
    <string name="done">Done</string>W
    <string name="edit">Edit</string>
    <string name="title_activity_add_new">AddNew</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_date"><![CDATA[Time & Date]]></string>
    <string name="all_tasks_finished">Congratulations, you have finished all your tasks</string>
    <string name="editingExistingTask">"Editing existing task "</string>
    <string name="lowPriority">Low Priority</string>
    <string name="mediumPriority">Medium Priority</string>
    <string name="highPriority">High Priority</string>
    <string name="task">"Task "</string>
    <string name="editedSuccessfully">edited successfully</string>
    <string name="newTask">"New task "</string>
    <string name="createdSuccessfully">created successfully</string>
    <string name="onActivatyResult">"onActivityResult: uknown request code "</string>
    <string name="onActivityResult">"onActivityResult: uknown request code "</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="cestina">Čeština</string>
    <string name="slovencina">Slovenčina</string>
    <string name="vietnamcina">tiếng việt</string>
    <string name="nameOfTask">Name of task</string>
    <string name="show_more_options">Show more options</string>
    <string name="description">Description</string>
    <string name="time1">Time</string>
    <string name="date1">Date</string>
    <string name="priority">Priority</string>
    <string name="subtasks">Subtasks</string>
    <string name="add_it">Add it</string>
    <string name="projekt1">Projekt1</string>
    <string name="loha_1">Úloha 1</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="save1">Save</string>
    <string name="descriptions">Descriptions...</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="list_of_all">List of all</string>
    <string name="list_of_all2">List of all</string>
    <string name="other">Other</string>
    <string name="main_page">Main Page</string>
    <string name="notifications2">Notifications</string>
    <string name="swtich2">Switch</string>
    <string name="delete_task_confirm">Do you really want to delete this task?</string>
    <string name="delete_task">Delete task</string>
    <string name="prompt">  Select one Football Club  </string>
    <string name="history">History</string>
    <string name="notificationsP">Notifications</string>
    <string name="notification">Notification</string>
    <string name="notifOn">Notification on</string>
    <string name="languages">Languages</string>
    <string name="languageP">Language</string>
    <string name="notifOff">Norification off</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
</resources>
