<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/notificationsP">
        <CheckBoxPreference
            android:title="@string/notification"
            android:summary="@string/notifOn"
            android:key="notification"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/languages">

        <ListPreference
        android:key="language"
        android:title="@string/languageP"
        android:defaultValue="@string/english"
        android:entries="@array/updateInterval"
        android:entryValues="@array/updateIntervalValues"
        android:summary="%s"
        />

    </PreferenceCategory>
</PreferenceScreen>