<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="task"
            type="addit.vutbr.fit.addit.model.Task.NonDtbTask" />
    </data>
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="addit.vutbr.fit.addit.view.AddNew"
        tools:showIn="@layout/activity_add_new">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.08"
                android:gravity="left|center"
                android:text="@string/nameOfTask"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="17sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editTextTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@{task.name}" />

            <CheckBox
                android:id="@+id/checkBox"
                style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:checked="false"
                android:onClick="itemClicked"
                android:text="@string/show_more_options"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.10"
                android:gravity="left|center"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@{task.description}"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:text="@string/time1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="17sp"
                    android:textStyle="normal|bold"
                    android:visibility="gone" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/switch1TextTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{task.getFormatedTime()}'
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="17sp"
                    android:textStyle="normal|bold"
                    android:visibility="gone" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/switch2TextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{task.date != null ? task.getFormatedDate() : "not specified" }'
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:gravity="left|center"
                android:text="@string/priority"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonPr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Set Priority"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                android:onClick="buttonClickFunction"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:gravity="left|center"
                android:text="@string/subtasks"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/subtasksLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/buttonAddSubtask"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:elevation="2dp"
                android:visibility="gone"
                android:onClick="onAddSubtaskLayout"
                android:text="@string/add_subtask" />



            <Button
                android:id="@+id/buttonConfirm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:elevation="2dp"
                android:onClick="addButtonClicked"
                android:text="@string/add_it" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
</layout>